--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <!-- End Culture -->
 
         <!-- Subscribe -->
-        <div class="js__parallax-window" style="background: url(img/1920x1080/07.jpg) 50% 0 no-repeat fixed;">
+        <!-- <div class="js__parallax-window" style="background: url(img/1920x1080/07.jpg) 50% 0 no-repeat fixed;">
             <div class="g-container--sm g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-margin-b-80--xs">
                     <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--white-opacity g-letter-spacing--2 g-margin-b-25--xs">Subscribe</p>
@@ -333,11 +333,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- End Subscribe -->
 
         <!-- Portfolio Filter -->
-        <div class="container g-padding-y-80--xs">
+        <!-- <div class="container g-padding-y-80--xs">
             <div class="g-text-center--xs g-margin-b-40--xs">
                 <h2 class="g-font-size-32--xs g-font-size-36--md">Producten</h2>
             </div>
@@ -349,14 +349,14 @@
                     <div data-filter=".motion" class="s-portfolio__filter-v1-item cbp-filter-item">Motion</div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- End Portfolio Filter -->
 
         <!-- Portfolio Gallery -->
-        <div class="container g-margin-b-100--xs">
-            <div id="js__grid-portfolio-gallery" class="cbp">
+        <!-- <div class="container g-margin-b-100--xs">
+            <div id="js__grid-portfolio-gallery" class="cbp"> -->
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item logos motion">
+                <!-- <div class="s-portfolio__item cbp-item logos motion">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/05.jpg" alt="Portfolio Image">
                     </div>
@@ -378,9 +378,9 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item graphic">
+                <!-- <div class="s-portfolio__item cbp-item graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/06.jpg" alt="Portfolio Image">
                     </div>
@@ -402,9 +402,9 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item logos">
+                <!-- <div class="s-portfolio__item cbp-item logos">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/07.jpg" alt="Portfolio Image">
                     </div>
@@ -426,9 +426,9 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item motion graphic">
+                <!-- <div class="s-portfolio__item cbp-item motion graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/08.jpg" alt="Portfolio Image">
                     </div>
@@ -450,9 +450,9 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item logos graphic">
+                <!-- <div class="s-portfolio__item cbp-item logos graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/09.jpg" alt="Portfolio Image">
                     </div>
@@ -474,9 +474,9 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item motion graphic">
+                <!-- <div class="s-portfolio__item cbp-item motion graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/04.jpg" alt="Portfolio Image">
                     </div>
@@ -498,20 +498,20 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <!-- End Item -->
-            </div>
+            <!-- </div> -->
             <!-- End Portfolio Gallery -->
-        </div>
+        <!-- </div> -->
         <!-- End Portfolio -->
 
         <!-- Testimonials -->
-        <div class="js__parallax-window" style="background: url(img/1920x1080/04.jpg) 50% 0 no-repeat fixed;">
+        <!-- <div class="js__parallax-window" style="background: url(img/1920x1080/04.jpg) 50% 0 no-repeat fixed;">
             <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--white-opacity g-letter-spacing--2 g-margin-b-50--xs">Testimonials</p>
-                <div class="s-swiper js__swiper-testimonials">
+                <div class="s-swiper js__swiper-testimonials"> -->
                     <!-- Swiper Wrapper -->
-                    <div class="swiper-wrapper g-margin-b-50--xs">
+                    <!-- <div class="swiper-wrapper g-margin-b-50--xs">
                         <div class="swiper-slide g-padding-x-130--sm g-padding-x-150--lg">
                             <div class="g-padding-x-20--xs g-padding-x-50--lg">
                                 <div class="g-margin-b-40--xs">
@@ -539,25 +539,25 @@
                                 <h4 class="g-font-size-15--xs g-font-size-18--sm g-color--white-opacity-light g-margin-b-5--xs">Jake Richardson / Google</h4>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- End Swipper Wrapper -->
 
                     <!-- Arrows -->
-                    <div class="g-font-size-22--xs g-color--white-opacity js__swiper-fraction"></div>
+                    <!-- <div class="g-font-size-22--xs g-color--white-opacity js__swiper-fraction"></div>
                     <a href="javascript:void(0);" class="g-display-none--xs g-display-inline-block--sm s-swiper__arrow-v1--right s-icon s-icon--md s-icon--white-brd g-radius--circle ti-angle-right js__swiper-btn--next"></a>
-                    <a href="javascript:void(0);" class="g-display-none--xs g-display-inline-block--sm s-swiper__arrow-v1--left s-icon s-icon--md s-icon--white-brd g-radius--circle ti-angle-left js__swiper-btn--prev"></a>
+                    <a href="javascript:void(0);" class="g-display-none--xs g-display-inline-block--sm s-swiper__arrow-v1--left s-icon s-icon--md s-icon--white-brd g-radius--circle ti-angle-left js__swiper-btn--prev"></a> -->
                     <!-- End Arrows -->
-                </div>
+                <!-- </div>
             </div>
-        </div>
+        </div> -->
         <!-- End Testimonials -->
 
         <!-- Clients -->
-        <div class="g-bg-color--sky-light">
-            <div class="g-container--md g-padding-y-80--xs g-padding-y-125--sm">
+        <!-- <div class="g-bg-color--sky-light">
+            <div class="g-container--md g-padding-y-80--xs g-padding-y-125--sm"> -->
                 <!-- Swiper Clients -->
-                <div class="s-swiper js__swiper-clients">
-                    <div class="swiper-wrapper">
+                <!-- <div class="s-swiper js__swiper-clients"> -->
+                    <!-- <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".1s">
                                 <img class="s-clients-v1" src="img/clients/01-dark.png" alt="Clients Logo">
@@ -584,10 +584,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- End Swiper Clients -->
-            </div>
-        </div>
+            <!-- </div>
+        </div> -->
         <!-- End Clients -->
 
         <!-- News -->
