--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
         <div class="js__parallax-window" style="background: url(img/1920x1080/03.jpg) 50% 0 no-repeat fixed;">
             <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-margin-b-80--xs">
-                    <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">The Fastest Way To Develop</h2>
+                    <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">Op maat gemaakte meubelen</h2>
                 </div>
-                <a href="http://keenthemes.com/" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50">Learn More</a>
+                <a href="http://keenthemes.com/" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50">Lees meer!</a>
             </div>
         </div>
         <!-- End Parallax -->
@@ -389,22 +389,22 @@
             <div class="container g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-text-center--xs g-margin-b-80--xs">
                     <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Feedback</p>
-                    <h2 class="g-font-size-32--xs g-font-size-36--md">Send us a note</h2>
+                    <h2 class="g-font-size-32--xs g-font-size-36--md">Vragen? Stuur ons een bericht!</h2>
                     <hr>
                 </div>
                 <form>
                     <div class="row g-margin-b-40--xs">
                         <div class="col-sm-6 g-margin-b-20--xs g-margin-b-0--md">
                             <div class="g-margin-b-20--xs">
-                                <input type="text" class="form-control s-form-v2__input g-radius--50" placeholder="* Name">
+                                <input type="text" class="form-control s-form-v2__input g-radius--50" placeholder="Naam">
                             </div>
                             <div class="g-margin-b-20--xs">
                                 <input type="email" class="form-control s-form-v2__input g-radius--50" placeholder="* Email">
                             </div>
-                            <input type="text" class="form-control s-form-v2__input g-radius--50" placeholder="* Phone">
+                            <input type="text" class="form-control s-form-v2__input g-radius--50" placeholder="* Telefoonnummer">
                         </div>
                         <div class="col-sm-6">
-                            <textarea class="form-control s-form-v2__input g-radius--10 g-padding-y-20--xs" rows="8" placeholder="* Your message"></textarea>
+                            <textarea class="form-control s-form-v2__input g-radius--10 g-padding-y-20--xs" rows="8" placeholder="* Uw bericht"></textarea>
                         </div>
                     </div>
                     <div class="g-text-center--xs">
