--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/970x970/01.jpg" alt="Image">
+                        <img class="img-responsive" src="img/6.jpeg" alt="Image">
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -334,7 +334,7 @@
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/970x970/02.jpg" alt="Image">
+                        <img class="img-responsive" src="img/azura.jpeg" alt="Image">
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -344,7 +344,7 @@
                 <div class="col-sm-4">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/970x970/03.jpg" alt="Image">
+                        <img class="img-responsive" src="img/chesterfield2.jpg" alt="Image">
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -354,7 +354,7 @@
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/970x970/01.jpg" alt="Image">
+                        <img class="img-responsive" src="img/como.jpg" alt="Image">
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -364,7 +364,7 @@
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/970x970/02.jpg" alt="Image">
+                        <img class="img-responsive" src="img/kaya.jpeg" alt="Image">
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
@@ -374,7 +374,7 @@
                 <div class="col-sm-4">
                     <!-- News -->
                     <article>
-                        <img class="img-responsive" src="img/970x970/03.jpg" alt="Image">
+                        <img class="img-responsive" src="img/olivia.jpg" alt="Image">
                         <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
                             <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
                         </div>
