--- a/index.html
+++ b/index.html
@@ -280,12 +280,12 @@
         <!-- End Features -->
 
         <!-- Parallax -->
-        <div class="js__parallax-window" style="background: url(img/1920x1080/03.jpg) 50% 0 no-repeat fixed;">
+        <div class="js__parallax-window" style="background: url(img/custom.jpg) 50% 0 no-repeat fixed; background-size: cover;">
             <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-margin-b-80--xs">
                     <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">Op maat gemaakte meubelen</h2>
                 </div>
-                <a href="http://keenthemes.com/" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50">Lees meer!</a>
+                <a href="#" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50">Lees meer!</a>
             </div>
         </div>
         <!-- End Parallax -->
@@ -463,12 +463,7 @@
             <!-- Copyright -->
             <div class="container g-padding-y-50--xs">
                 <div class="row">
-                    <div class="col-xs-6">
-                        <a href="index.html">
-                            <img class="g-width-100--xs g-height-auto--xs" src="img/logo.png" alt="Megakit Logo">
-                        </a>
-                    </div>
-                    <div class="col-xs-6 g-text-right--xs">
+                    <div class="col-xs-12 g-text-right--xs">
                         <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light"><a href="http://kaandag.com">Kagan Dag </a> Theme Powered by: <a target="_blank" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
                     </div>
                 </div>
