--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                    </div>
                                </div>
                                <div class="g-media__body g-padding-x-20--xs">
-                                   <h3 class="g-font-size-18--xs">Responsive Layout</h3>
+                                   <h3 class="g-font-size-18--xs">Snelle leveringen</h3>
                                    <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
                                </div>
                            </div>
@@ -214,7 +214,7 @@
                                    </div>
                                </div>
                                <div class="g-media__body g-padding-x-20--xs">
-                                   <h3 class="g-font-size-18--xs">Fully Customizable</h3>
+                                   <h3 class="g-font-size-18--xs">Volledig op maat</h3>
                                    <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
                                </div>
                            </div>
@@ -227,7 +227,7 @@
                                    </div>
                                </div>
                                <div class="g-media__body g-padding-x-20--xs">
-                                   <h3 class="g-font-size-18--xs">Pixel Perfect</h3>
+                                   <h3 class="g-font-size-18--xs">AAA+ Kwaliteit</h3>
                                    <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
                                </div>
                            </div>
@@ -401,13 +401,12 @@
                         </div>
                         <div class="col-sm-2 g-margin-b-40--xs g-margin-b-0--md">
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Subscribe to Our Newsletter</a></li>
                                 <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Privacy Policy</a></li>
                                 <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Terms &amp; Conditions</a></li>
                             </ul>
                         </div>
                         <div class="col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1 s-footer__logo g-padding-y-50--xs g-padding-y-0--md">
-                            <h3 class="g-font-size-18--xs g-color--white">Megakit</h3>
+                            <h3 class="g-font-size-18--xs g-color--white">Asya Meubelen</h3>
                             <p class="g-color--white-opacity">We are a creative studio focusing on culture, luxury, editorial &amp; art. Somewhere between sophistication and simplicity.</p>
                         </div>
                     </div>
