--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <!-- Action -->
                 <ul class="list-inline s-header__action s-header__action--rb">
                     <li class="s-header__action-item">
-                        <a class="s-header__action-link" href="#">
+                        <a class="s-header__action-link" href="https://nl-nl.facebook.com/asyaoutletmeubelen/">
                             <i class="g-padding-r-5--xs ti-facebook"></i>
                             <span class="g-display-none--xs g-display-inline-block--sm">Facebook</span>
                         </a>
@@ -187,62 +187,18 @@
 
         <!--========== PAGE CONTENT ==========-->
         <!-- Features -->
-        <div id="js__scroll-to-section" class="container g-padding-y-80--xs g-padding-y-85--sm">
-                   <div class="g-text-center--xs g-margin-b-100--xs">
-                       <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Welkom op Asya meubelen!</p>
-                       <h2 class="g-font-size-32--xs g-font-size-36--md">We Create Beautiful Experiences <br> That Drive Successful Businesses.</h2>
-                   </div>
-                   <div class="row g-margin-b-60--xs g-margin-b-70--md">
-                       <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
-                           <div class="clearfix">
-                               <div class="g-media g-width-30--xs">
-                                   <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".1s">
-                                       <i class="g-font-size-28--xs g-color--primary ti-desktop"></i>
-                                   </div>
-                               </div>
-                               <div class="g-media__body g-padding-x-20--xs">
-                                   <h3 class="g-font-size-18--xs">Snelle leveringen</h3>
-                                   <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
-                               </div>
-                           </div>
-                       </div>
-                       <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
-                           <div class="clearfix">
-                               <div class="g-media g-width-30--xs">
-                                   <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".2s">
-                                       <i class="g-font-size-28--xs g-color--primary ti-settings"></i>
-                                   </div>
-                               </div>
-                               <div class="g-media__body g-padding-x-20--xs">
-                                   <h3 class="g-font-size-18--xs">Volledig op maat</h3>
-                                   <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
-                               </div>
-                           </div>
-                       </div>
-                       <div class="col-sm-4">
-                           <div class="clearfix">
-                               <div class="g-media g-width-30--xs">
-                                   <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".3s">
-                                       <i class="g-font-size-28--xs g-color--primary ti-ruler-alt-2"></i>
-                                   </div>
-                               </div>
-                               <div class="g-media__body g-padding-x-20--xs">
-                                   <h3 class="g-font-size-18--xs">AAA+ Kwaliteit</h3>
-                                   <p class="g-margin-b-0--xs">This is where we sit down, grab a cup of coffee and dial in the details.</p>
-                               </div>
-                           </div>
-                       </div>
-                   </div>
-                 </div>
+        <div id="js__scroll-to-section" class="container g-padding-y-80--xs g-padding-y-125--sm">
+
+        </div>
         <!-- End Features -->
 
         <!-- Parallax -->
-        <div class="js__parallax-window" style="background: url(img/custom.jpg) 50% 0 no-repeat fixed; background-size: cover;">
+        <div class="js__parallax-window" style="background: url(img/b1.jpg) 50% 0 no-repeat fixed;">
             <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-margin-b-80--xs">
                     <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">Op maat gemaakte meubelen</h2>
                 </div>
-                <a href="#" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50">Lees meer!</a>
+                <a href="http://keenthemes.com/" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50">Lees meer!</a>
             </div>
         </div>
         <!-- End Parallax -->
@@ -267,23 +223,23 @@
                 </div>
             </div>
             <div class="col-sm-3 g-promo-section__img-right--lg g-bg-position--center g-height-100-percent--md js__fullwidth-img">
-                <img class="img-responsive" src="img/side-img.jpg" alt="Image">
+                <img class="img-responsive" src="img/970x970/03.jpg" alt="Image">
             </div>
         </div>
         <!-- End Culture -->
 
         <!-- News -->
-        <div class="container g-padding-y-80--xs g-padding-y-80--sm">
+        <div class="container g-padding-y-80--xs g-padding-y-125--sm">
             <div class="g-text-center--xs g-margin-b-80--xs">
-                <h2 class="g-font-size-32--xs g-font-size-36--md">Onze bankenstellen</h2>
+                <h2 class="g-font-size-32--xs g-font-size-36--md">Soorten banken</h2>
             </div>
             <div class="row">
                 <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
                     <!-- News -->
                     <article>
-                        <a href=""><img class="img-responsive" src="img/6.jpeg" alt="Image"></a>
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
-                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
+                        <img class="img-responsive" src="img/6.jpeg" alt="Image">
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Orien</a></h3>
                         </div>
                     </article>
                     <!-- End News -->
@@ -292,8 +248,8 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/azura.jpeg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
-                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Azura</a></h3>
                         </div>
                     </article>
                     <!-- End News -->
@@ -302,8 +258,8 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/chesterfield2.jpg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
-                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">chesterfield II</a></h3>
                         </div>
                     </article>
                     <!-- End News -->
@@ -312,8 +268,8 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/como.jpg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
-                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Como</a></h3>
                         </div>
                     </article>
                     <!-- End News -->
@@ -322,8 +278,8 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/kaya.jpeg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
-                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Kaya</a></h3>
                         </div>
                     </article>
                     <!-- End News -->
@@ -332,8 +288,8 @@
                     <!-- News -->
                     <article>
                         <img class="img-responsive" src="img/olivia.jpg" alt="Image">
-                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-25--xs g-padding-y-25--xs">
-                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Item</a></h3>
+                        <div class="g-bg-color--white g-box-shadow__dark-lightest-v2 g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                            <h3 class="g-font-size-22--xs g-letter-spacing--1"><a href="#">Olivia</a></h3>
                         </div>
                     </article>
                     <!-- End News -->
@@ -341,6 +297,36 @@
             </div>
         </div>
         <!-- End News -->
+        <!-- Feedback Form -->
+        <div class="g-bg-color--sky-light">
+            <div class="container g-padding-y-80--xs g-padding-y-125--sm">
+                <div class="g-text-center--xs g-margin-b-80--xs">
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Feedback</p>
+                    <h2 class="g-font-size-32--xs g-font-size-36--md">Vragen? Stuur ons een bericht!</h2>
+                    <hr>
+                </div>
+                <form>
+                    <div class="row g-margin-b-40--xs">
+                        <div class="col-sm-6 g-margin-b-20--xs g-margin-b-0--md">
+                            <div class="g-margin-b-20--xs">
+                                <input type="text" class="form-control s-form-v2__input g-radius--50" placeholder="Naam">
+                            </div>
+                            <div class="g-margin-b-20--xs">
+                                <input type="email" class="form-control s-form-v2__input g-radius--50" placeholder="* Email">
+                            </div>
+                            <input type="text" class="form-control s-form-v2__input g-radius--50" placeholder="* Telefoonnummer">
+                        </div>
+                        <div class="col-sm-6">
+                            <textarea class="form-control s-form-v2__input g-radius--10 g-padding-y-20--xs" rows="8" placeholder="* Uw bericht"></textarea>
+                        </div>
+                    </div>
+                    <div class="g-text-center--xs">
+                        <button type="submit" class="text-uppercase s-btn s-btn--md s-btn--primary-bg g-radius--50 g-padding-x-80--xs">Verstuur</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- End Feedback Form -->
 
         <!-- Google Map -->
         <section class="s-google-map">
@@ -371,12 +357,13 @@
                         </div>
                         <div class="col-sm-2 g-margin-b-40--xs g-margin-b-0--md">
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
+                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Subscribe to Our Newsletter</a></li>
                                 <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Privacy Policy</a></li>
                                 <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Terms &amp; Conditions</a></li>
                             </ul>
                         </div>
                         <div class="col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1 s-footer__logo g-padding-y-50--xs g-padding-y-0--md">
-                            <h3 class="g-font-size-18--xs g-color--white">Asya Meubelen</h3>
+                            <h3 class="g-font-size-18--xs g-color--white">Megakit</h3>
                             <p class="g-color--white-opacity">We are a creative studio focusing on culture, luxury, editorial &amp; art. Somewhere between sophistication and simplicity.</p>
                         </div>
                     </div>
@@ -387,8 +374,13 @@
             <!-- Copyright -->
             <div class="container g-padding-y-50--xs">
                 <div class="row">
-                    <div class="col-xs-12 g-text-right--xs">
-                        <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light"><a href="http://kaandag.com">Kagan Dag </a> Theme Powered by: <a target="_blank" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                    <div class="col-xs-6">
+                        <a href="index.html">
+                            <img class="g-width-100--xs g-height-auto--xs" src="img/456.jpg" alt="Megakit Logo">
+                        </a>
+                    </div>
+                    <div class="col-xs-6 g-text-right--xs">
+                        <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light"><a href="http://kaandag.com">Kagan Dag</a> & <a href="#">Faried Abdul</a> Theme Powered by: <a target="_blank" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
                     </div>
                 </div>
             </div>
