--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/chicago.jpg');">
+                <!-- <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/chicago.jpg');">
                     <div class="container g-text-center--xs g-ver-center--xs">
                         <div class="g-margin-b-30--xs">
                             <div class="g-margin-b-30--xs">
@@ -149,7 +149,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/olivia.jpg');">
                     <div class="container g-text-center--xs g-ver-center--xs">
                         <div class="g-margin-b-30--xs">
