--- a/index_lawyer.html
+++ b/index_lawyer.html
@@ -128,7 +128,7 @@
         <div class="g-fullheight--xs js__parallax-window" style="background: url(img/yola.jpg) 100% 0 no-repeat fixed; background-size: cover;">
             <div class="g-container--md g-ver-center--xs g-text-center--xs">
                 <div class="g-margin-b-70--xs">
-                    <h1 class="g-font-size-55--sm g-font-size-70--lg g-font-family--playfair g-color--primary g-margin-b-20--xs g-margin-b-40--sm">Yola</h1>
+                    <h1 class="g-font-size-55--sm g-font-size-70--lg g-font-family--playfair g-color--success g-margin-b-20--xs g-margin-b-40--sm">Yola</h1>
                 </div>
             </div>
             <a href="#" class="s-scroll-to-section-v1--bc g-margin-b-15--xs">
